# bitcamp2026-crystal-forge

./: .gitignore  README.md  index.html  package.json
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/crystal_forge_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: README.md  benchmark_corrmap_frontier.py  benchmark_qprobe_adaptive_frontier.py  benchmark_qprobe_adaptive_stack.py  benchmark_qprobe_superconductor.py  build_regime_benchmark.py  build_regime_benchmark_refined.py  build_regime_benchmark_refined_v2.py  calibrate_qprobe_adaptive_stepwise_family_policy.py  data_gen.py  data_gen_intrinsic_corrmap.py  data_gen_intrinsic_corrmap_general.py  data_gen_qprobe.py  data_gen_qprobe_adaptive_physics.py  data_gen_qprobe_adaptive_stepwise.py  data_gen_qprobe_adaptive_stepwise_constrained.py  data_gen_qprobe_adaptive_stepwise_generalized.py  data_gen_qprobe_adaptive_synth.py  data_gen_qprobe_general.py  data_gen_qprobe_superconductor_ml.py  data_gen_routing.py  data_gen_trust.py  eval_binary_corrmap_on_regime_benchmark.py  eval_corrmap_family_models_on_regime_benchmark.py  eval_corrmap_on_refined_benchmark.py  eval_corrmap_on_regime_benchmark.py  eval_corrmap_on_regime_benchmark_general.py  eval_corrmap_on_regime_benchmark_structured.py  eval_physics_first_corrmap.py  eval_qprobe_adaptive_general_model.py  eval_qprobe_adaptive_physics_model.py  eval_qprobe_adaptive_stepwise_model.py  eval_qprobe_general_model.py  eval_routing_model.py  generate_qprobe_report.py  generate_vqe_report.py  train_binary_corrmap.py  (+15 more)
(+148 files in other folders)
