[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crystal-forge-backend"
version = "0.1.0"
description = "Backend service for the Crystal Forge Hubbard simulation project."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "httpx>=0.28,<1.0",
  "numpy>=2.0,<3.0",
  "scipy>=1.16,<2.0",
  "scikit-learn>=1.5,<2.0",
  "torch>=2.5,<3.0",
  "qiskit>=2.3,<3.0",
  "qiskit-nature>=0.7,<0.8",
  "pytest>=9.0,<10.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
